--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
       <img
         src="desktop/image-host.jpg "
         class="absolute -z-20 right-0 w-[670px] hidden md:block"
-        alt=""
+        alt="podcast"
       />
       <!-- Tablet Image -->
       <img
         src="tablet/image-host.jpg"
         class="block absolute -z-20 right-0 w-[500px] h-[560px] md:hidden"
-        alt=""
+        alt="podcast"
       />
       <!-- Logo -->
-      <img src="desktop/logo.svg" class="md:pt-0 pt-12" alt="" />
+      <img src="desktop/logo.svg" class="md:pt-0 pt-12" alt="Logo" />
       <div
         class="md:mt-8 mt-14 pt-10 pb-5 pr-0 flex flex-col gap-y-6 bg-darkblue w-[600px]"
       >
@@ -69,10 +69,10 @@
         </form>
         <!-- Feature Section -->
         <div class="flex gap-x-5 h-7 mt-5">
-          <img src="desktop/spotify.svg" alt="" />
-          <img src="desktop/apple-podcast.svg" alt="" />
-          <img src="desktop/google-podcasts.svg" alt="" />
-          <img src="desktop/pocket-casts.svg" alt="" />
+          <img src="desktop/spotify.svg" alt="spotify" />
+          <img src="desktop/apple-podcast.svg" alt="apple-podcast" />
+          <img src="desktop/google-podcasts.svg" alt="google-podcasts" />
+          <img src="desktop/pocket-casts.svg" alt="pocket-casts" />
         </div>
       </div>
     </section>
@@ -83,7 +83,7 @@
       <img
         src="mobile/image-host.jpg"
         class="w-screen absolute h-[670px] -z-10"
-        alt=""
+        alt="podcast"
       />
       <!-- BG color -->
       <div class="bg-darkblue py-16 p-5 bg-opacity-80 h-[670px]">
@@ -91,7 +91,7 @@
         <div class="flex flex-col text-center gap-y-7">
           <!-- LOGO -->
           <div>
-            <img src="desktop/logo.svg" class="w-1/2 mx-auto" alt="" />
+            <img src="desktop/logo.svg" class="w-1/2 mx-auto" alt="Logo" />
           </div>
           <!-- Heading -->
           <h1
@@ -111,25 +111,25 @@
             <img
               src="desktop/spotify.svg"
               class="w-14 h-5 xsm:h-auto xsm:w-auto"
-              alt=""
+              alt="spotify"
             />
             <!-- ICON 2 -->
             <img
               src="desktop/apple-podcast.svg"
               class="w-16 h-5 xsm:h-auto xsm:w-auto"
-              alt=""
+              alt="apple-podcast"
             />
             <!-- ICON 3 -->
             <img
               src="desktop/google-podcasts.svg"
               class="w-20 h-5 xsm:h-auto xsm:w-auto"
-              alt=""
+              alt="google-podcasts"
             />
             <!-- ICON 4 -->
             <img
               src="desktop/pocket-casts.svg"
               class="w-20 h-5 xsm:h-auto xsm:w-auto"
-              alt=""
+              alt="pocket-casts"
             />
           </div>
           <!-- Mobile Form -->
