--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Pod&mdash;Tailwind</title>
   </head>
-  <body class="relative md:overflow-x-hidden">
+  <body class="relative overflow-x-hidden">
     <!-- Bg color -->
     <div
       class="h-[650px] w-screen hidden sm:block bg-darkblue absolute -z-50"
