--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <input
             class="bg-stroke placeholder-purple2 text-purple2 rounded-full pl-2 outline-none"
             placeholder="email address"
+            value="email"
             type="email"
             required
           />
@@ -138,6 +139,7 @@
               class="bg-stroke p-3 placeholder-purple2 text-purple2 rounded-full pl-7 xsm:w-3/4 mx-auto w-full outline-none"
               placeholder="email address"
               type="email"
+              value="email"
               required
             />
             <button
