fixed some bugs

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           class="bg-stroke rounded-full w-2/3 p-1 pl-5 flex justify-between"
         >
           <input
-            class="bg-stroke placeholder-purple2 text-purple2 rounded-full pl-2 outline-none"
+            class="bg-stroke focus:bg-stroke placeholder-purple2 text-purple2 rounded-full pl-2 outline-none"
             placeholder="email address"
             name="email"
             type="email"
@@ -136,7 +136,7 @@
           <!-- Mobile Form -->
           <form netlify>
             <input
-              class="bg-stroke p-3 placeholder-purple2 text-purple2 rounded-full pl-7 xsm:w-3/4 mx-auto w-full outline-none"
+              class="bg-stroke p-3 focus:bg-stroke placeholder-purple2 text-purple2 rounded-full pl-7 xsm:w-3/4 mx-auto w-full outline-none"
               placeholder="email address"
               type="email"
               name="Email"
